--- a/src/pug/components/first-selection.pug
+++ b/src/pug/components/first-selection.pug
@@ -1,20 +1,18 @@
 section.firs-selection
-   img(src="./assets/imgs/img.jpg", alt="img").img
-   .container
-      div.first-row
-         div.firs-selection_content
-            h1.heading Kembang Flower Mantap
-            p.paragraph Lorem Ipsum is simply dummy text of the printing 
-            p.paragraph and typesetting industry. Lorem Ipsum has been the 
-            p.paragraph industry's standard dummy text ever since the 1500s,
-         div.plant_plant
-            div
-               div.plant
-                  img(src="./assets/imgs/arrow.svg", alt="left")
-                  .previous Previous
-               h2.previous_kaktus  Kaktus Plant
-               div.plant_next
+   .container_row
+      img(src="./assets/imgs/img.jpg", alt="img").img
+      div.grid-container
+         div.item1
+            p.heading Kembang Flower Mantap
+            p.paragraph Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+         div.item2
+               div
+                  div.plant
+                     img(src="./assets/imgs/arrow.svg", alt="left")
+                     .previous Previous
+                  h2.previous_kaktus  Kaktus Plant
+         div.item3
             div.next_img  
-               p.next Next
-                  img(src="./assets/imgs/right.svg", alt="arrow")
-                  h3.rahasia Rahasia Plant           
+            p.next Next
+            img(src="./assets/imgs/right.svg", alt="arrow").arrow
+            p.rahasia Rahasia Plant           
