--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -6,6 +6,9 @@
 .header{
    position: absolute;
    z-index: 1;
+   top: 0;
+   left: 0;
+   right: 0;
   
    
    &_row{
@@ -13,24 +16,24 @@
       align-items: center;
       justify-content: space-between;
       padding-top: 3.9rem;
-      margin-left: 16rem;
+      
    }
 
    &_links{
       display: flex;
       align-items: center;
       justify-content:space-between;
-      margin-left: 82.4rem;
+     
    }
 }
 
 .links_header{
-   padding: 0 4rem;
+  padding: 0 3.5rem 0 4rem;
 }
 .link_header{
    display: inline-block;
    font-weight: bold;
-   font-size: 1,4rem;
+   font-size: 1.4rem;
    color:$c-secondary;
    
    
@@ -38,12 +41,14 @@
    &--inverse{
     border: 1px solid $c-secondary;
     font-weight: bold;
-    font-size: 1,4rem;
+    font-size: 1.4rem;
     color: #fff; 
     background-color:$c-secondary;
     padding: 0.8rem 3.25rem;
-    
-    
+    margin-left: 2.95rem;
+    font-family: Nunito;
+    font-style: normal;
+    line-height: 2rem;
    
 
    }
