--- a/src/pug/components/first-selection.pug
+++ b/src/pug/components/first-selection.pug
@@ -1,18 +1,18 @@
 section.firs-selection
    .container_row
-      img(src="./assets/imgs/img.jpg", alt="img").img
-      div.grid-container
-         div.item1
+      div.element.style
+         img(src="./assets/imgs/img.jpg", alt="img")
+         div.flover
             p.heading Kembang Flower Mantap
             p.paragraph Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-         div.item2
-               div
-                  div.plant
+            div.plant
+               div  
+                  div.plant_plant
                      img(src="./assets/imgs/arrow.svg", alt="left")
-                     .previous Previous
-                  h2.previous_kaktus  Kaktus Plant
-         div.item3
-            div.next_img  
-            p.next Next
-            img(src="./assets/imgs/right.svg", alt="arrow").arrow
-            p.rahasia Rahasia Plant           
+                     p.previous Previous
+                  p.previous_kaktus  Kaktus Plant 
+               div.next_img
+                  div.next  
+                     p.next__next Next
+                     img(src="./assets/imgs/right.svg", alt="arrow").arrow
+                  p.rahasia Rahasia Plant           
