--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -7,8 +7,8 @@
 }
 .footer{
    display: flex;
-   justify-content:space-between;
-   margin: 6.5rem 6rem 0 9.5rem;
+   align-items:center;
+   margin: 6rem 6rem 0 9.5rem;
    
    
 }
@@ -39,6 +39,7 @@
    font-size: 1.3rem;
    line-height: 2rem;
    color: #4F4F4F;
+   max-width: 28.2rem;
 }
 .perusahaan{
    margin-right:6rem;
