--- a/src/pug/components/second-section.pug
+++ b/src/pug/components/second-section.pug
@@ -1,33 +1,13 @@
 section.second-selection
    .container
-      div.services
-         div.car
-            div.row
-               img(src="./assets/imgs/car.svg", alt="car")
-               div.delivery
-                  h2 Fast 
-                  h2 Delivery
-            div.lorem
-               p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-         div.car
-            div.row
-               img(src="./assets/imgs/headphones.svg", alt="car")
-               h2.delivery Great Customer Service
-            div.lorem
-               p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-         div.car
-            div.row
-               img(src="./assets/imgs/plant.svg", alt="car")
-               div.delivery
-                  h2 Original 
-                  h2 Plants
-            div.lorem
-               p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-         div.car
-            div.row
-               img(src="./assets/imgs/dollar-symbol.svg", alt="car")
-               div.delivery   
-                  h2 Affordable 
-                  h2 Price
-            div.lorem   
-               p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+      .item
+         mixin item(img, title, description)
+            .items
+               .item-img
+                  img(src=img, alt=features)
+                  .item__title=title
+               .item__description=description
+         +item("./assets/imgs/car.svg","Fast Delivery","Lorem Ipsum is simply dummy text of the printing and typesetting industry's Lorem Ipsum has been the industry's standard,")
+         +item("./assets/imgs/headphones.svg","Great Customer Service","Lorem Ipsum is simply dummy text of the printing and typesetting industry's Lorem Ipsum has been the industry's standard,")
+         +item("./assets/imgs/plant.svg","Original Plants","Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard")
+         +item("./assets/imgs/dollar-symbol.svg","Affordable Price","Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard")
