--- a/src/pug/components/fifth-section.pug
+++ b/src/pug/components/fifth-section.pug
@@ -4,7 +4,7 @@ section.fifth-section
          div.aside
             div.info
                div.ad_block 
-                  p.shop Get your favourites plant on our shop now
+                  h3.shop Get your favourites plant on our shop now
                   a(href="#").nverse Visit Shop 
                div 
-                  img(src="./assets/imgs/flower.png", alt="flower")
+                  img(src="./assets/imgs/flower.png", alt="flower").img_shop
