--- a/src/pug/components/first-selection.pug
+++ b/src/pug/components/first-selection.pug
@@ -1,7 +1,7 @@
 section.firs-selection
    .container_row
       div.element.style
-         img(src="./assets/imgs/img.jpg", alt="img")
+         img(src="./assets/imgs/img.jpg", alt="img").img
          div.flover
             p.heading Kembang Flower Mantap
             p.paragraph Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
