--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -16,8 +16,9 @@ footer.footer
                 p.tanaman Tanaman
                 p.tanaman Tanaman Lain
             div.perusahaan 
-                h.email Berlangganan Email Kami
-                input(type='email' placeholder='Masukan Alamat Email')
-                a(href="#").submit Submit       
+                h2.email Berlangganan Email Kami
+                div
+                    input(class="form-control form-control-lg" type='email' placeholder='Masukan Alamat Email').email__input
+                    a(href="#").submit Submit       
                     
                     
