--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -2,7 +2,7 @@ header.header
     div.container
         div.header_row
             a(href="index.html")
-                img(src="./assets/imgs/logo.svg", alt="logo")
+                img(src="./assets/imgs/logo.svg", alt="logo").logo
             .header_links
                 a(href="#")
                     img(src="./assets/imgs/magnifier.svg", alt="magnifier")
