--- a/src/assets/scss/components/fourth-section.scss
+++ b/src/assets/scss/components/fourth-section.scss
@@ -6,6 +6,7 @@
    display: flex;
    justify-content:space-between;
    padding-top: 8.8rem;
+   flex-wrap: wrap;
 }
 .caption{
    font-size: 40px;
@@ -18,9 +19,15 @@
    color:$c-secondary;
    margin: 1.6rem  12.4rem 7.4rem 0;
    line-height: 2.8rem;
+   
 }
 
 .text-desc{
    text-align: left;
-   margin-left: 2.2rem;
+   flex-wrap: wrap;
+   max-width: 60%;
+}
+
+.foto_foto{
+   max-width: 40%;
 }
