--- a/src/assets/scss/components/third-section.scss
+++ b/src/assets/scss/components/third-section.scss
@@ -6,6 +6,7 @@
    display: flex;
    justify-content: space-between;
    padding: 8rem 0 1.3rem;
+   flex-wrap: wrap;
 }
 .search{
    font-size: 20px;
@@ -16,8 +17,8 @@
 .features{
    display: flex;
    justify-content: space-between;
-   
    padding-top: 2.4rem;
+   flex-wrap: wrap;
 }
 .landak{
    margin-bottom: 1.6rem;
