--- a/src/pug/components/fifth-section.pug
+++ b/src/pug/components/fifth-section.pug
@@ -6,5 +6,5 @@ section.fifth-section
                div.ad_block 
                   h3.shop Get your favourites plant on our shop now
                   a(href="#").nverse Visit Shop 
-               div 
+               div.shop_img 
                   img(src="./assets/imgs/flower.png", alt="flower").img_shop
