--- a/src/pug/components/first-selection.pug
+++ b/src/pug/components/first-selection.pug
@@ -11,7 +11,7 @@ section.firs-selection
                      img(src="./assets/imgs/arrow.svg", alt="left")
                      p.previous Previous
                   p.previous_kaktus  Kaktus Plant 
-               div.next_img
+               div.next__img
                   div.next  
                      p.next__next Next
                      img(src="./assets/imgs/right.svg", alt="arrow").arrow
