--- a/src/pug/components/fourth-section.pug
+++ b/src/pug/components/fourth-section.pug
@@ -1,11 +1,10 @@
 section.fourth-section
    .container
       div.body
-         div
-            div.text-desc 
-               h2.caption Buy more plants, it 
-               h2.caption helps you to be relaxed 
-               p.desc Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi gravida gravida aliquam. Pellentesque et lobortis nisl. Sed et mauris justo. Nulla eu enim non mauris maximus dignissim. Maecenas vitae eros sapien. Quisque pellentesque tempus dignissim
+         div.text-desc 
+            h2.caption Buy more plants, it 
+            h2.caption helps you to be relaxed 
+            p.desc Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi gravida gravida aliquam. Pellentesque et lobortis nisl. Sed et mauris justo. Nulla eu enim non mauris maximus dignissim. Maecenas vitae eros sapien. Quisque pellentesque tempus dignissim
             img(src="./assets/imgs/foto.png", alt="foto")
-         div    
+         div.foto_foto    
             img(src="./assets/imgs/foto_foto.png", alt="foto")
