--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,7 +11,7 @@ html(lang="en")
         include ./components/header
         include ./components/first-selection
         include ./components/second-section
-        include ./components/third-section
-        include ./components/fourth-section
-        include ./components/fifth-section
-        include ./components/footer
+        //-include ./components/third-section
+        //-include ./components/fourth-section
+        //-include ./components/fifth-section
+        //-include ./components/footer
